--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" class="h-screen flex justify-center items-center"></div>
   </body>
 </html>
